# NSECGenerator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
wordlists/: example.txt
